# jhjdl3984

./: .gitignore  02-자바스크립트소개.html  Ch04_task(code).ipynb  Ch04_task.ipynb  Ch05_task.ipynb  Ch21_task.ipynb  Chaper0913_task.ipynb  Chaper1416_task.ipynb  Chapter0508_과제.ipynb  Chapter1720_task.ipynb  README.md  db.sqlite3  profile.html  pyproject.toml  task_1 (1).ipynb  task_1.ipynb  챌린지_CREAT(초급).sql
1회차/: 03-자바스크립트동작원리-출력해보기.html
AdminPageProject/: main_page.html
Django/2일차/bookmark/: db.sqlite3  pyproject.toml
Django/2일차/bookmark/config/: settings.py  urls.py
Django/3일차/blog/: db.sqlite3  pyproject.toml
Django/3일차/blog/blog/: models.py  views.py
Django/3일차/blog/blog/migrations/: 0001_initial.py
Django/3일차/blog/config/: settings.py  urls.py
Django/3일차/blog/member/: views.py
Django/3일차/blog/templates/: blog_detail.html  blog_list.html
Django/3일차/blog/templates/registration/: login.html  signup.html
SCRAPING_15/: kream_2.py  naver.py  s_naver.py
bookmark/: pyproject.toml
config/: settings.py  urls.py
db/: MiniProject.sql  MongoDB.js  chapter01_06.ipynb  chapter07_13.ipynb  lms_mysql.sql  pet.sql  profile.css  챌린지_CREAT(초급).sql
fastapi_assignment/: main.py  pyproject.toml
fastapi_assignment/app/models/: users.py
fastapi_assignment/app/routers/: movies.py  users.py
fastapi_assignment/app/schemas/: movies.py  users.py
fastapi_assignment/app/utils/: jwt.py
html/: form.html  profile.html
java/: 02-자바스크립트소개.html  07-템플릿리터럴.html  08-undefined외.html
javascript/: monster.html
todo/: admin.py  (+2 more)
(+126 files in other folders)
