[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["jhjdl3984 <jhjdl3984@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0"
ipython = "^9.8.0"
django-extensions = "^4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
